--- a/.github/workflows/context.yml
+++ b/.github/workflows/context.yml
@@ -1,8 +1,13 @@
 name: explore context
-on: workflow_dispatch
+on: [ push, workflow_dispatch ]
 jobs:
     context:
         runs-on: ubuntu-latest
         steps:
           - name: github object
             run: echo "${{ toJSON(github.repository) }}"
+          - name: upload artifacts
+            uses: actions/upload-artifact@v4
+            with:
+              name: some files
+              path: 1-lets-echo
