--- a/.github/workflows/context.yml
+++ b/.github/workflows/context.yml
@@ -2,12 +2,17 @@ name: explore context
 on: [ push, workflow_dispatch ]
 jobs:
     context:
-        runs-on: ubuntu-latest
-        steps:
-          - name: github object
-            run: echo "${{ toJSON(github.repository) }}"
-          - name: upload artifacts
-            uses: actions/upload-artifact@v4
-            with:
-              name: some files
-              path: 1-lets-echo/
+      runs-on: ubuntu-latest
+      steps:
+        - name: github object
+          run: echo "${{ toJSON(github.repository) }}"
+    upload:
+      runs-on: ubuntu-latest
+      steps:
+        - name: checkout
+          uses: actions/checkout@v4
+        - name: upload artifacts
+          uses: actions/upload-artifact@v4
+          with:
+            name: some files
+            path: 1-lets-echo/
