--- a/.github/workflows/context.yml
+++ b/.github/workflows/context.yml
@@ -5,7 +5,13 @@ jobs:
       runs-on: ubuntu-latest
       steps:
         - name: github object
-          run: echo "${{ toJSON(github) }}"
+          run: |
+            echo "${{ toJSON(github.workspace) }}"
+            cd "${{ github.workspace }}"
+            ls
+            cd ..
+            ls
+          
     upload:
       needs: context
       runs-on: ubuntu-latest
