--- a/.github/workflows/context.yml
+++ b/.github/workflows/context.yml
@@ -4,12 +4,12 @@ jobs:
     context:
       runs-on: ubuntu-latest
       steps:
+        - name: Checkout
+          uses: actions/checkout@v4
         - name: github object
           run: |
             echo "${{ toJSON(github.workspace) }}"
             cd "${{ github.workspace }}"
-            ls
-            cd ..
             ls
           
     upload:
